<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item1"
            android:icon="@drawable/ic_plus"
            android:title="@string/title_1"
            android:checkable="false"/>
        <item
            android:id="@+id/item2"
            android:title="@string/title_2"
            android:checked="true"/>
        <item
            android:id="@+id/item3"
            android:title="@string/title_3"
            android:checked="false"
            android:enabled="false"/>
        <item
            android:id="@+id/item4"
            android:title="@string/title_4"
            android:checked="false"
            android:enabled="false"/>
        <item
            android:id="@+id/item5"
            android:title="@string/title_5"
            android:checked="false"
            android:enabled="false"/>

    </group>

</menu>