<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="13dp"
    android:layout_marginStart="13dp"
    android:layout_marginRight="13dp"
    android:layout_marginTop="6dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/yourRec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_rec"
                    android:textColor="#000" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#C3C3C3"
                    android:orientation="horizontal">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/friendsRec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friendsRec"
                    android:textColor="#000" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#C3C3C3">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/bestRec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/best_recom"
                    android:textColor="#000" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bestrecom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#C3C3C3">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>